bpo-36312: Fix decoders for some code pages. (GH-12369)